# omnichain_timecapsulel_solanabrkout

./: Omnichain_Time_Capsule_Instructions.txt  README.md  install-dependencies.bat  package-lock.json  package.json  start-frontend.bat  vite-app.jsx  vite-index.html  vite-main.jsx
frontend/: .env  config-overrides.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  env-config.js  index.css  index.js  main.jsx
frontend/src/components/: CreateCapsule.js  CreateCapsule.jsx  Dashboard.jsx  ViewCapsules.js  ViewCapsules.jsx
frontend/src/config/: wallet.jsx
frontend/src/utils/: TimeCapsuleClient.js  blockchain.js  fetch-idl.js  package.json
src/evm/: 9.1.0  hardhat.config.js
src/evm/contracts/: OAPP.sol  SimpleERC721.sol  TimeCapsuleReceiver.sol  TimeCapsuleReceiverFlat.sol
src/evm/scripts/: deploy.js  interact.js
src/solana/client/: index.js
src/solana/program/: Cargo.toml
src/solana/program/src/: layerzero.rs  lib.rs
