[package]
name = "time-capsule"
version = "0.1.0"
description = "Omnichain Time Capsule Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "time_capsule"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.17"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] } 